src/test/ui/resolve/token-error-correct.stderr
error: incorrect close delimiter: `}`
  --> $DIR/token-error-correct.rs:6:1
   |
LL | fn main() {
   |           - close delimiter possibly meant for this
LL |     foo(bar(;
   |            - un-closed delimiter
LL |
LL | }
   | ^ incorrect close delimiter

error[E0425]: cannot find function `bar` in this scope
  --> $DIR/token-error-correct.rs:4:9
   |
LL |     foo(bar(;
   |         ^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
